# leptos-query

./: Cargo.toml  README.md
devtools/: Cargo.toml  README.md
devtools/src/: dev_tools.rs  lib.rs  timeout.rs
devtools/src/component/: button.rs  dot_badge.rs
example/leptos-query-axum-workspace/: Cargo.toml
example/leptos-query-axum-workspace/app/: Cargo.toml
example/leptos-query-axum-workspace/app/src/: error_template.rs  lib.rs
example/leptos-query-axum-workspace/frontend/src/: lib.rs
example/leptos-query-axum-workspace/server/src/: fileserv.rs  main.rs
example/start-axum/: Cargo.toml
example/start-axum/src/: app.rs  fileserv.rs  lib.rs  main.rs  todo.rs
example/start-csr/src/: layout.rs  lib.rs  main.rs
example/start-csr/src/components/: header.rs  mod.rs  skeleton.rs  spinner.rs  switch.rs
example/start-csr/src/pages/: home.rs  interactive.rs  intro.rs  not_found.rs  single.rs
query/: Cargo.toml
query/src/: cache_observer.rs  create_query.rs  garbage_collector.rs  lib.rs  query.rs  query_cache.rs  query_client.rs  query_executor.rs  query_observer.rs  query_options.rs  query_result.rs  use_query.rs
query/src/query_persister/: indexed_db.rs  local_storage.rs  mod.rs
